--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 spring.application.name=WebSocket
 
+spring.datasource.url=jdbc:mysql://localhost:3306/websocket
+spring.datasource.username=root
+spring.datasource.password=10061
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 logging.level.com.example.WebSocket=DEBUG
 server.port=8089
