--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
+//tasks.named('test') {
+//	useJUnitPlatform()
+//}
+
+tasks.withType(JavaCompile).configureEach {
+	options.compilerArgs += '-parameters'
 }
