--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,8 @@ dependencies {
 
 	//html
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
 }
 
 tasks.named('test') {
